# components/ambient-sdk/go-sdk/types/gateway_route.go
@@ -1,5 +1,0 @@
-package types
-
-type GatewayRoute struct {
-	Host string `json:"host,omitempty"`
-}
